--- a/src/htmlReporter.html
+++ b/src/htmlReporter.html
@@ -67,6 +67,6 @@
 
 <body>
   <div id="html-report-container"></div>
-  <script type="text/javascript" src="tabContent.js" charset="utf-8"></script>
+  <script type="text/javascript" src="htmlReporter.js" charset="utf-8"></script>
 </body>
 </html>
